<resources>
    <string name="app_name" translatable="false">WatchMe</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to Main -->
    <string name="title_activity_main">Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_main_name">Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Settings</string>

    <!-- Strings related to Book Edit -->
    <string name="title_activity_book_edit">Edit book</string>
    <string name="book_edit_actionSave">Save</string>
    <string name="book_edit_actionDelete">Delete</string>
    <string name="book_edit_txtTotalPages">Total pages</string>
    <string name="book_edit_txtAuthor">Author</string>
    <string name="book_edit_txtTitle">Title</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Profile settings -->
    <string name="pref_category_account">Account</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_edit_profile">Edit profile</string>
    <string name="pref_edit_profile_summary">Edit your profile</string>
    <string name="pref_logout">Logout</string>
    <string name="pref_edit_profile_button_key" translatable="false">edit_profile</string>
    <string name="pref_logout_button_key" translatable="false">logout</string>
    <string name="user_edit_txtDefaultId">not registered</string>

    <!-- Strings related to Database settings -->
    <string name="pref_category_database">Database</string>
    <string name="preference_key_database_manager" translatable="false">database_manager</string>
    <string name="preference_title_database_manager">Database manager</string>
    <string name="preference_summary_database_manager">Opens database manager</string>

    <!-- Error strings -->
    <string name="error_title_invalid">Title invalid</string>
    <string name="error_author_invalid">Author name invalid</string>
    <string name="error_invalid_pages_quantity">Total pages invalid</string>
    <string name="error_email_invalid">Email address invalid</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_field_required">Field required</string>

    <!-- Messages strings -->
    <string name="message_user_registered">User registered</string>
    <string name="message_book_added">Book added</string>
    <string name="message_error_database">Database error</string>
    <string name="user_edit_txtName">Name (optional)</string>
    <string name="user_edit_txtEmail">Email</string>
    <string name="user_edit_txtId" translatable="false">ID:</string>
    <string name="title_activity_user_edit">Edit user</string>
    <string name="error_invalid_name">Name invalid</string>
    <string name="error_email_already_exist">Email already used</string>
    <string name="message_user_updated">Profile updated</string>
    <string name="book_edit_txtActualPage">Actual page</string>
    <string name="error_wrong_password">Incorrect password</string>
    <string name="title_activity_book_add">Add book</string>
    <string name="book_id_extra_key" translatable="false">book_id</string>

    <string name="title_activity_user_list">Users list</string>
    <string name="sample_email">emailAddress@domain.com</string>
    <string name="sample_bookTitle">Sample Title Book</string>
    <string name="sample_bookAuthor">" Sample Author Name"</string>
    <string name="title_activity_user_add">User register</string>
    <string name="message_book_edited">Book updated</string>
    <string name="sample_bookReadPages">Read 1/100</string>
    <string name="list_book_txtReadPages">Read %1$d/%2$d</string>
    <string name="list_book_not_started">Not started to read</string>
    <string name="action_settings">Settings</string>
    <string name="message_user_deleted">User removed</string>
    <string name="search_title">Search books</string>
    <string name="search_books_hint">Search books</string>
    <string name="title_activity_books_list">Books</string>

    <string name="cover">Cover</string>
    <string name="message_permission_denied">Permission denied</string>
    <string name="message_ask_permission">Permission needed</string>
    <string name="action_sign_up">Register</string>
    <string name="error_email_user_not_found">Email not found</string>
    <string name="user_edit_password_text">Password</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="confirm_remove_user_title">Delete confirmation</string>
    <string name="confirm_remove_user_description">Are you sure you want to delete your profile? Your books will also be deleted</string>
    <string name="dialog_confirm_password_title">Password confirmation</string>
    <string name="dialog_confirm_password_description">Confirm your password to proceed</string>
    <string name="intent_extra_user_id" translatable="false">user_id</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sample_movieDirector">Sample Movie Director</string>
    <string name="sample_movieTitle">Sample Movie Title</string>
    <string name="title_activity_movie_add">Add movie</string>
    <string name="message_movie_edited">Movie updated</string>
    <string name="message_movie_added">Movie added</string>
    <string name="message_movie_deleted">Movie deleted</string>
    <string name="title_activity_movie_edit">Edit movie</string>
    <string name="message_no_changes">No changes detected</string>
    <string name="sample_series_title">Sample Series Title</string>
    <string name="edittext_hint_series_title">Series title</string>
    <string name="title_activity_series_add">Add series</string>
    <string name="message_series_deleted">Series deleted</string>
    <string name="title_activity_series_edit">Edit series</string>
    <string name="message_email_required">Email required</string>
    <string name="list_book_txtReadPagesNotStarted">Not started</string>

</resources>
