<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_account">
        <Preference
            android:title="@string/pref_edit_profile"
            android:key="@string/pref_edit_profile_button_key"
            android:summary="@string/pref_edit_profile_summary"
            android:icon="@drawable/ic_account_circle_black_24dp" />
        <Preference
            android:title="@string/pref_logout"
            android:key="@string/pref_logout_button_key"
            android:icon="@drawable/ic_exit_to_app_black_24dp" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_database">
        <Preference
            android:title="@string/preference_title_database_manager"
            android:key="@string/preference_key_database_manager"
            android:summary="@string/preference_summary_database_manager"
            android:icon="@drawable/ic_list_black_24dp" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
