<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageview_series_cover"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_book_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_bookTitle"
                android:gravity="start|top"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_bookAuthor"
                android:gravity="start|top"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

            <TextView
                android:id="@+id/list_book_txtReadPages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|bottom"
                android:text="@string/sample_bookReadPages"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
